; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_node_protocol.c_GetTableDDLEvents.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_node_protocol.c_GetTableDDLEvents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetTableDDLEvents(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %10 = load i32*, i32** @NIL, align 8
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** @NIL, align 8
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** @NIL, align 8
  store i32* %12, i32** %7, align 8
  %13 = load i32*, i32** @NIL, align 8
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** @NIL, align 8
  store i32* %14, i32** %9, align 8
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32* @GetTableCreationCommands(i32 %15, i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @list_concat(i32* %18, i32* %19)
  store i32* %20, i32** %5, align 8
  %21 = load i32, i32* %3, align 4
  %22 = call i32* @GetTableIndexAndConstraintCommands(i32 %21)
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i32* @list_concat(i32* %23, i32* %24)
  store i32* %25, i32** %5, align 8
  %26 = load i32, i32* %3, align 4
  %27 = call i32* @GetTableReplicaIdentityCommand(i32 %26)
  store i32* %27, i32** %8, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = call i32* @list_concat(i32* %28, i32* %29)
  store i32* %30, i32** %5, align 8
  %31 = load i32, i32* %3, align 4
  %32 = call i32* @CreatePolicyCommands(i32 %31)
  store i32* %32, i32** %9, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** %9, align 8
  %35 = call i32* @list_concat(i32* %33, i32* %34)
  store i32* %35, i32** %5, align 8
  %36 = load i32*, i32** %5, align 8
  ret i32* %36
}

declare dso_local i32* @GetTableCreationCommands(i32, i32) #1

declare dso_local i32* @list_concat(i32*, i32*) #1

declare dso_local i32* @GetTableIndexAndConstraintCommands(i32) #1

declare dso_local i32* @GetTableReplicaIdentityCommand(i32) #1

declare dso_local i32* @CreatePolicyCommands(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
